Update footer: Replace Contact with Access/Invitation Only

--- a/index.html
+++ b/index.html
@@ -660,9 +660,10 @@
            </ul>
         </div>
         <div>
-           <h4 class="font-data text-gold-primary text-xs tracking-widest mb-4">CONTACT</h4>
+           <h4 class="font-data text-gold-primary text-xs tracking-widest mb-4">ACCESS</h4>
            <ul class="space-y-2 font-data text-xs text-gray-500">
-             <li>SECURE@SVGNSYSTEMS.COM</li>
+             <li>INVITATION ONLY</li>
+             <li>ENCRYPTED CHANNEL</li>
            </ul>
         </div>
       </div>
