Add Command Protocols section with operational examples

--- a/index.html
+++ b/index.html
@@ -546,6 +546,58 @@
       </div>
     </section>
 
+    <!-- Operational Protocols (Command Mode) -->
+    <section class="py-32 bg-bunker-dark border-t border-white/5 relative overflow-hidden">
+        <!-- Background glow -->
+        <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[800px] h-[300px] bg-gold-primary/5 blur-[100px] pointer-events-none"></div>
+
+        <div class="max-w-6xl mx-auto px-8 relative z-10">
+            <div class="text-center mb-16">
+                <span class="font-data text-gold-primary tracking-[0.3em] text-xs">OPERATING SYSTEM LOGIC</span>
+                <h2 class="font-luxury text-4xl text-white mt-4">COMMAND PROTOCOLS</h2>
+                <p class="font-ui text-gray-400 mt-4 max-w-xl mx-auto">The AI does not just store information. It actively manages the crisis timeline, adapting to utilities status and inventory levels in real-time.</p>
+            </div>
+
+            <div class="grid md:grid-cols-3 gap-6">
+                <!-- Protocol 1: Drills -->
+                <div class="bg-black border border-white/10 p-6 font-data text-xs relative group hover:border-gold-primary/30 transition-colors">
+                    <div class="text-gray-500 mb-2">PROACTIVE TRAINING</div>
+                    <div class="text-gold-primary mb-4">> EXECUTE: DRILL_09</div>
+                    <div class="text-gray-300 leading-relaxed">
+                        "Tonight at 1900H: Gas Main Shut-off Drill.<br>
+                        Target time: 3 minutes.<br>
+                        Location: North Sector Basement.<br>
+                        <span class="animate-pulse">_Timer Standing By</span>"
+                    </div>
+                </div>
+
+                <!-- Protocol 2: Decision Tree -->
+                <div class="bg-black border border-white/10 p-6 font-data text-xs relative group hover:border-gold-primary/30 transition-colors">
+                    <div class="text-gray-500 mb-2">DYNAMIC DECISION TREE</div>
+                    <div class="text-alert-red mb-4">> INPUT: WATER_PRESSURE_LOSS</div>
+                    <div class="text-gray-300 leading-relaxed">
+                        "Is tap water running? [NO]<br>
+                        Is grid power active? [YES]<br>
+                        ACTION: Activate well pump B.<br>
+                        ACTION: Fill bathtub reserves (Priority 1)."
+                    </div>
+                </div>
+
+                <!-- Protocol 3: Rationing -->
+                <div class="bg-black border border-white/10 p-6 font-data text-xs relative group hover:border-gold-primary/30 transition-colors">
+                    <div class="text-gray-500 mb-2">RESOURCE CALCULATOR</div>
+                    <div class="text-hologram-cyan mb-4">> CALC: INVENTORY_STATUS</div>
+                    <div class="text-gray-300 leading-relaxed">
+                        "Detected: 4 Occupants.<br>
+                        Water Reserve: 40L.<br>
+                        Forecast: 3 Days @ Normal Usage.<br>
+                        RECOMMENDATION: Initiate Rationing Level 2."
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- The Device (Hardware) -->
     <section class="py-32 bg-void relative border-t border-white/5">
         <div class="max-w-6xl mx-auto px-8 grid md:grid-cols-2 gap-16 items-center">
