Add Google Search Console verification

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://svgnsystems.com/">
     
+    <!-- Google Search Console Verification -->
+    <meta name="google-site-verification" content="GDMuXd4hH-m_BE8uZUxgmtnKm243lpg-iE1c1AzHagk" />
+    
     <!-- Additional SEO Meta Tags -->
     <meta name="robots" content="index, follow">
     <meta name="author" content="SVGN Systems">
